# menagos-ioc-mcp

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: __init__.py  __main__.py  config.py  indicator.py  logging_config.py  lookup.py  rate_limit.py  schema.py  scoring.py  server.py
app/providers/: __init__.py  abuseipdb.py  base.py  greynoise.py  virustotal.py
docs/: architecture.md  claude-code.md  claude-desktop.md  limitations.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  utils.ts
frontend/src/components/: MetaFooter.tsx  SearchBar.tsx  SourceCard.tsx  VerdictCard.tsx
scripts/: capture_screenshots.py  client_example.py  demo.sh
tests/: conftest.py  test_abuseipdb.py  test_greynoise.py  test_indicator.py  test_lookup.py  test_rate_limit.py  test_schema.py  test_scoring.py  test_server.py  test_virustotal.py
tests/fixtures/: abuseipdb_ip.json  abuseipdb_ip_malicious.json  greynoise_ip.json  greynoise_ip_malicious.json  virustotal_hash.json  virustotal_ip.json  virustotal_ip_malicious.json
